# admin-requests

./: .access_control.yml  .feedstock_outputs_autoreg_allowlist.yml  .gitignore  .pre-commit-config.yaml  README.md  access_control.py  admin_requests_utils.py  archive_feedstock.py  environment.yml  hydrosignatures.txt  mark_broken.py  pyproject.toml  python-eccodes.txt  token_reset.py  update_repodata_patches.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
archive/: allure-python-commons  articdb.txt  brainreg-napari.txt  cloog.txt  cpp-opentelemetry-api.txt  cub.txt  cuda-cccl-impl.txt  datatable.txt  fail.txt  gmatelastoplasticqpot3d.txt  gnuradio-soapy.txt  hdfs3.txt  humanleague  jb-everything-feedstock.txt  ledger-feedstock  libhdfs3.txt  monetdblite.txt  openmm-atmmetaforce-plugin.txt  parquet_cpp.txt  postgres-xl.txt  pygeos.txt  pytrillinos.txt  pyxtensor.txt  qcportal.txt  r-genabel.txt  r-nlmixr.txt  r-sme.txt  rank_filter.txt  repo.txt  root_pandas.txt  theano.txt  trillinos.txt  ufal.udpipe-temp.txt  urdf-parser-py.txt  various_r_feedstocks.txt  vscode-extensions.txt  yaafe.tyt
broken/: abseil-cpp.txt  aeppl.txt  allure-python-arch.txt  antlr4-python3-runtime.txt  apache-libcloud-91af4aad.txt  apache-libcloud-b149f8e3.txt  arcticdb.txt  arcticdb1.6.0.txt  arpack.txt  articdb.txt  arviz-0.16.0.txt  assimp.txt  attrs-22.1.0_0.txt  aubio-1723455d.txt  autovizwidget-53e96986.txt  aws_c_common_0814.txt  awswrangler.txt  backports-datetime-fromisoformat.txt  bcrypt.txt  bespokefit.txt  black.txt  blackd.txt  blas-devel.txt  blas.txt  bluesky.txt  boa.txt  (+428 more)
(+1270 files in other folders)
